src/polychem/snapshots/smithereens__polychem__composition_parser__tests__composition_errors.snap
---
source: src/polychem/composition_parser.rs
expression: out
---
  × expected an element (like Au) or an isotope (like [15N]) optionally
  │ followed by a number
  ╰─▶   × the isotope "Tc-100" could not be found in the supplied chemical
      database
        help: double-check for typos, or add a new entry to the chemical
      database
      
   ╭────
 1 │ NH2[100Tc]O4 
   ·    ───┬───
   ·       ╰── isotope not found
   ╰────

