src/polychem/snapshots/smithereens__polychem__composition_parser__tests__errors-12.snap
---
source: src/polychem/composition_parser.rs
expression: out
---
  × Should be an element (Au) or and isotope [15N] optionally followed by
  │ a number
  ╰─▶   × Mass number?
      
   ╭────
 1 │ [H2O 
   ·  ▲
   ·  ╰── a number?
   ╰────
  help: Have you tried...

