src/polychem/snapshots/smithereens__polychem__composition_parser__tests__errors-13.snap
---
source: src/polychem/composition_parser.rs
expression: out
---
  × Should be an element (Au) or and isotope [15N] optionally followed by
  │ a number
  ╰─▶   × Should be a count (can't start with a zero!)
        help: Just type a number...
      
   ╭────
 1 │ [0H2O 
   ·  ▲
   ·  ╰── expected non-zero
   ╰────
  help: Have you tried...

