src/polychem/snapshots/smithereens__polychem__composition_parser__tests__errors-14.snap
---
source: src/polychem/composition_parser.rs
expression: out
---
  × Should be an element (Au) or and isotope [15N] optionally followed by
  │ a number
  ╰─▶   × expected ']' to close isotope brackets
      
   ╭────
 1 │ [10H2O 
   ·     ▲
   ·     ╰── ']'
   ╰────
  help: Have you tried...

